# connect-readme

./: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  techstack.md  techstack.yml
.next/: trace
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: amp.js  webpack.js
.next/static/webpack/: webpack.0969ba7273f1c4ee.hot-update.js  webpack.10fd62c2c791727b.hot-update.js  webpack.115b91ac8c3dd0b4.hot-update.js  webpack.3b04c9f65d731afb.hot-update.js  webpack.45183b1ab6c109e5.hot-update.js  webpack.576f40dacaf493a9.hot-update.js  webpack.7679dc314cf13765.hot-update.js  webpack.9d74322186b3cecf.hot-update.js  webpack.a4b2fcaacb21633c.hot-update.js  webpack.abe44d413296c869.hot-update.js  webpack.b5d910c0818d5082.hot-update.js  webpack.bcd38e3926fa0585.hot-update.js  webpack.c2f4c4b8d573e8ea.hot-update.js  webpack.c7208e14277f64bd.hot-update.js  webpack.c7bf4caa12f630e9.hot-update.js  webpack.ccc73c30647f07ef.hot-update.js  webpack.f3b88ae0a337e8a9.hot-update.js  webpack.f92d53ccc1541184.hot-update.js
Backend/: .gitignore  app.js  env.sample  package-lock.json  package.json
Backend/src/auth/: auth.controller.js  (+1 more)
backend-test/: .env  app.js  package-lock.json  package.json
frontend/: .eslintrc.json  index.html  jsconfig.json  package-lock.json  package.json
frontend/src/: App.vue  data.json  main.js
src/pages/: _document.tsx  index.tsx
workspaces/app/: package.json  pnpm-lock.yaml  tailwind.config.js
workspaces/components/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+82 files in other folders)
